--- a/css/css.css
+++ b/css/css.css
@@ -75,14 +75,22 @@ body
 	line-height:30px;
 	padding:2px 10px 2px 10px;
 	margin:7px 1px 7px 1px;
+	height:30px;  /* 給高度 */
 }
 .mainmu:hover
 {
 	background:url(../icon/menu2.fw.png) center no-repeat;
 	background-size:cover;
 }
-.mainmu2
-{
+/* 自己再寫mw */
+.mw{ 
+	position:relative;
+	top:-10px;
+	z-index:99;
+	left:120px;
+	display:none;
+}
+.mainmu2{
 	position:relative;
 	border-radius:10px;
 	background:url(../icon/menu3.fw.png)center no-repeat;
@@ -110,6 +118,10 @@ body
 	padding:5px;
 	display:block;
 	margin: 3px;
+}
+/* 把menuput裡面的a標籤變成區域元素，這點哪都可以連到連結 */
+#menuput a{
+	display: block;
 }
 .di
 {
